Spacing fix for lower text

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
  }
 
 .disclaimer {
-	margin: -25px 0 0 0px;
+	margin: -75px 0 0 0px;
 }
 
 .disclaimer li {
@@ -80,6 +80,6 @@ div {
 }
 
 p {
-  padding: 50px 0 15px 0;
+  padding: 15px 0 15px 0;
 }
 
